<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:padding="16dp">

    <!-- Game Title -->
    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textSize="32sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <!-- Game Status -->
    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turno_del_jugador"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_below="@id/gameTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- Statistics -->
    <LinearLayout
        android:id="@+id/statisticsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameStatus"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/playerWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jugador_0"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/computerWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computador_0"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/ties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empates_0"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- Game Board -->
    <GridLayout
        android:id="@+id/gameBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statisticsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:columnCount="3"
        android:rowCount="3">

        <!-- Individual cells will be added programmatically -->

    </GridLayout>


    <LinearLayout
        android:id="@+id/MenuBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/gameBoard"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/new_game_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_juego"
            android:textColor="#000000"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/difficulty_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dificultad"
            android:textColor="#000000"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/quit_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:textColor="#000000" />
    </LinearLayout>


</RelativeLayout>